components/style/Navbar.module.css
.navbar{
    width: 85%;
    margin: 0 auto;
    background-image: linear-gradient(#5d4fa8, #0f0f2b);
    color: wheat;
    padding :1rem;
    border-radius: .5rem;
}
.navbar_container{
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.navbar_container h1{
    line-height: 0;
    color: #fff;
    transform: skewX(-20deg);
    text-transform: uppercase;
    background-color: #9a02ac ;
    position: relative;
    cursor: pointer;
    transition: all .4s ease-in-out;
}
.navbar_container_left h1:hover{
    color: #9a02ac;
}
.mobile{
    display: none;
}
.back{
    width: 7%;
border: 1px solid black;
border-radius: .8rem;
background-color: #1f1a37;
color: #fff;
text-align: center; 
display: pointer;
position: fixed;
top:5rem;
left: 1rem;
cursor: pointer;
}

.navbar_container_right{
    color: #fff;
    background: transparent;
    /* border: 2px solid #9a02ac; */
    border-radius: .5rem;
    font-weight: 700;
    /* cursor: pointer; */
    padding: .5rem;
}
.connected button{
    /* width: 40%; */
    border: 1px solid black;
    border-radius: .2rem;
    background-color: #534c75;
    color: #fff;
    padding: .4rem .6rem;
    /* margin: .2rem 2rem; */

    
}
.connected{
    position: relative;
}
.usermodal{
    position: absolute;
    top: 4rem;
    right: 0;
    padding: 1rem;
    border-radius: .5rem;
    background-color: #1f1a36;
    width: 15rem;

}
.user_box{
    text-align: center;
    position: relative;
}
.closeBtn{
    position: absolute;
    right: 0;
    /* cursor: pointer; */
    color: #fff;
    font-size: 1.5rem;
    transition: all .2s ease-in-out;
}
.closeBtn:hover{
    cursor: pointer;
    transform: rotate(-45deg);
}

.price{
    width: 85%;
    margin: 0 auto;
    color: #fff;
    margin-block: 1rem;
    padding: 1rem;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 2rem;
    overflow: hidden;
}
.price_box{
    background-color: #1f1a36;
    /* background-image: linear-gradient(#5d4fa8); */
    /* background-color: #0f0f2b; */
    border-radius: .5rem;
    display: flex;
    padding-left:1rem;
    line-height: .2;
    align-items: center;
    gap: 2rem;
}

.etherprice{
    display: flex;
    align-items: center;
    gap: 2rem;
}
.price_box h1{
 font-size: 1.2rem;
 color: #fff;
}
.etherprice p{
    line-height: .5;
    font-weight: 600;
    font-size: 14px;
}
.supplyEther{
    display: flex;
    gap: 2rem;
    align-items: center;
}
.supplyIcon{
    font-size: 3rem;
}
.logowidth{
    width: 80%;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    border-left: 1px solid #af9eb1;
    text-align: center;
    padding-left: 2.5rem;
}
.logowidth p{
    line-height: 1.3;
    margin-right: 1rem;
    font-size: 1.1rem;
    color: #fff;
    padding: 1rem 0;
    border-radius: .2rem;
}

@media screen and (max-width: 45em) {
    .navbar{
        width: 100%;
        margin-block: 0rem;
        padding: 0rem;
        border-radius: 0rem;
    }
    .navbar_container{
        padding: 1rem 2rem;
    }
    .desktop{
        display: none;
    }
    .mobile{
        display: block;
        line-height: 0;
        cursor: pointer;
    }
    .price{
        grid-template-columns: 1fr;
        padding: 0;
        width: 95%;
    }
    .etherprice{
        padding: .5rem;
    }
    .logowidth{
        width: 100%;
        border-left: 0;
        padding-left: 0;
    }
    .logowidth p{
        font-size: .8rem;
    }
    .tokenbox{
        text-align: center;
        margin-bottom: -2.5rem;
    }
    .navbar_container_right button{
        width: 100%;
    }
    .usermodal{
        right: .5rem;
    }
    .back{
  width: 20%;
    }


}

